# opencode-memory-plugin

./: .envrc  .gitignore  README.md  justfile  opencode.json  package.json  pyproject.toml  tsconfig.json
.config/: opencode.json
src/: cli.py  index.ts  shared.ts
src/opencode_memory/: cli.py  mcp_server.py
tests/integration/: memory-plugin.test.ts  opencode.json  postgres-memory-plugin.test.ts
