[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opencode-memory-plugin"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastmcp",
  "pyyaml",
  "typer",
]

[project.scripts]
opencode-memory-mcp = "mcp_server:main"

[tool.setuptools]
py-modules = ["mcp_server", "cli"]
package-dir = {"" = "src"}
